--- a/Jupiter_Notebooks/SPD_Means.ipynb
+++ b/Jupiter_Notebooks/SPD_Means.ipynb
@@ -62,7 +62,7 @@
     "## Log Euclidian Mean\n",
     "from scipy.linalg import logm,expm\n",
     "from Stein_Divergence_Mean import Log_Euclid_Mean\n",
-    "Random_Mat = Random_SPD(5,100)\n",
+    "Random_Mat = Random_SPD(7,10000)\n",
     "Mean_Euclid = Log_Euclid_Mean(Random_Mat)"
    ]
   },
@@ -352,39 +352,290 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Means Clustering on Riemannian Manifolds\n",
+    "\n",
+    "## Standard K-Means Clustering Formulation\n",
+    "\n",
+    "The objective of **standard K-Means** clustering in Euclidean space \\( \\mathbb{R}^n \\) is to partition \\( N \\) data points \\( \\{x_1, x_2, \\ldots, x_N\\} \\) into \\( K \\) clusters. The goal is to minimize the within-cluster variance by finding the cluster centroids \\( \\{\\mu_1, \\mu_2, \\ldots, \\mu_K\\} \\) that minimize the following objective function:\n",
+    "\n",
+    "$$\n",
+    "\\min_{\\mu_1, \\ldots, \\mu_K} \\sum_{i=1}^N \\sum_{k \\in \\{1, \\ldots, K\\}} \\| x_i - \\mu_k \\|^2\n",
+    "$$\n",
+    "\n",
+    "The steps for standard K-Means are:\n",
+    "\n",
+    "1. **Assignment Step**:\n",
+    "   $$\n",
+    "   c_i = \\arg \\min_{k} \\| x_i - \\mu_k \\|^2\n",
+    "   $$\n",
+    "   where \\( c_i \\) is the index of the cluster assigned to point \\( x_i \\).\n",
+    "   \n",
+    "2. **Update Step**:\n",
+    "   $$\n",
+    "   \\mu_k = \\frac{1}{|C_k|} \\sum_{x_i \\in C_k} x_i\n",
+    "   $$\n",
+    "   where \\( C_k \\) is the set of points assigned to cluster \\( k \\) and \\( |C_k| \\) is the number of points in \\( C_k \\).\n",
+    "\n",
+    "## Riemannian Manifolds: Key Definitions\n",
+    "\n",
+    "In a **Riemannian manifold** \\( \\mathcal{M} \\), distances are measured along geodesics, the shortest paths between points on the manifold. Let \\( x, y \\in \\mathcal{M} \\).\n",
+    "\n",
+    "1. **Riemannian Distance** \\( d_{\\mathcal{M}}(x, y) \\): \n",
+    "   $$\n",
+    "   d_{\\mathcal{M}}(x, y) = \\text{length of the shortest path (geodesic) from } x \\text{ to } y\n",
+    "   $$\n",
+    "2. **Riemannian Mean** \\( \\mu \\) of points \\( \\{x_1, \\ldots, x_N\\} \\): \n",
+    "   $$\n",
+    "   \\mu = \\arg \\min_{m \\in \\mathcal{M}} \\sum_{i=1}^N d_{\\mathcal{M}}(x_i, m)^2\n",
+    "   $$\n",
+    "\n",
+    "## Objective for K-Means on Riemannian Manifolds\n",
+    "\n",
+    "To perform K-Means clustering on a Riemannian manifold \\( \\mathcal{M} \\), the Euclidean distance is replaced by the Riemannian distance, and the centroid (mean) calculation is adapted to respect the manifold's geometry.\n",
+    "\n",
+    "The objective function becomes:\n",
+    "\n",
+    "$$\n",
+    "\\min_{\\mu_1, \\ldots, \\mu_K} \\sum_{i=1}^N \\sum_{k \\in \\{1, \\ldots, K\\}} d_{\\mathcal{M}}(x_i, \\mu_k)^2\n",
+    "$$\n",
+    "\n",
+    "### Steps for Riemannian K-Means\n",
+    "\n",
+    "1. **Assignment Step**:\n",
+    "   $$\n",
+    "   c_i = \\arg \\min_{k} d_{\\mathcal{M}}(x_i, \\mu_k)^2\n",
+    "   $$\n",
+    "\n",
+    "2. **Update Step**:  \n",
+    "   Update each centroid \\( \\mu_k \\) as the **Riemannian mean** of the points assigned to cluster \\( k \\). This can be computed iteratively, for example, using a gradient descent method:\n",
+    "   \n",
+    "   $$\n",
+    "   \\mu_k^{(t+1)} = \\exp_{\\mu_k^{(t)}} \\left( \\frac{1}{|C_k|} \\sum_{x_i \\in C_k} \\log_{\\mu_k^{(t)}}(x_i) \\right)\n",
+    "   $$\n",
+    "\n",
+    "   - Here, \\( \\exp_p(v) \\) is the **exponential map** at point \\( p \\), which maps a tangent vector \\( v \\) at \\( p \\) to the manifold.\n",
+    "   - \\( \\log_p(x) \\) is the **logarithmic map** at \\( p \\), which finds the tangent vector at \\( p \\) that points toward \\( x \\) along the geodesic.\n",
+    "\n",
+    "   The iterative update continues until convergence, often determined by a threshold on the change in centroids."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.14845902  0.51491676 -0.68053939 ... -1.97748201 -0.49596737\n",
+      "  -1.92426873]\n",
+      " [-2.0269713   0.79595704 -0.42452368 ... -1.73101057 -0.13973352\n",
+      "  -2.28550468]\n",
+      " [-0.60713359 -0.83745199 -1.4399613  ... -2.1541326   0.54465808\n",
+      "  -1.30343571]\n",
+      " ...\n",
+      " [-1.74296526 -0.72991729 -0.55056624 ... -2.26120597  0.12641557\n",
+      "  -2.10948175]\n",
+      " [ 0.00944333 -0.43189024 -0.75717211 ... -2.03304191 -0.64258102\n",
+      "  -1.53664034]\n",
+      " [-2.15177848  0.82100738 -0.5775887  ... -2.24870312 -0.16186484\n",
+      "  -2.05945899]]\n"
+     ]
+    }
+   ],
    "source": [
     "from Geometric_Kmeans import K_means\n",
     "\n",
-    "Test = K_means(Random_Mat,K = 2, Metric = 'Log_Det')"
+    "Test = K_means(Random_Mat,K = 10, Metric = 'Log_Det')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.27787612, -0.06156403, -0.07234982,  0.00244176,  0.0472393 ,\n",
-       "        -0.06156403,  0.3898257 ,  0.01038758, -0.01919001,  0.02914623,\n",
-       "        -0.07234982,  0.01038758,  0.33885793,  0.01583179, -0.03851254,\n",
-       "         0.00244176, -0.01919001,  0.01583179,  0.43213025, -0.08515624,\n",
-       "         0.0472393 ,  0.02914623, -0.03851254, -0.08515624,  0.31344149],\n",
-       "       [ 0.637446  ,  0.05648641,  0.02208925, -0.00906965, -0.25664703,\n",
-       "         0.05648641,  0.21384137,  0.0289659 , -0.01613034, -0.02674497,\n",
-       "         0.02208925,  0.0289659 ,  0.24295054, -0.0135978 , -0.02503092,\n",
-       "        -0.00906965, -0.01613034, -0.0135978 ,  0.24623711,  0.05796417,\n",
-       "        -0.25664703, -0.02674497, -0.02503092,  0.05796417,  0.39569841]])"
+       "array([[ 1.78979071e-01,  5.82628957e-02, -7.52803515e-03,\n",
+       "        -2.55397980e-02, -4.85989370e-02, -4.18920050e-02,\n",
+       "        -3.97257232e-02,  5.82628957e-02,  1.78494618e-01,\n",
+       "        -1.15818220e-02, -2.18712881e-02, -5.02067046e-02,\n",
+       "        -4.14669983e-02, -3.89465112e-02, -7.52803515e-03,\n",
+       "        -1.15818220e-02,  1.27954076e-01,  3.27758328e-03,\n",
+       "         7.43269462e-03,  5.89639329e-03,  6.32043486e-03,\n",
+       "        -2.55397980e-02, -2.18712881e-02,  3.27758328e-03,\n",
+       "         1.33175116e-01,  2.01923881e-02,  1.87798176e-02,\n",
+       "         1.66180941e-02, -4.85989370e-02, -5.02067046e-02,\n",
+       "         7.43269462e-03,  2.01923881e-02,  1.69885354e-01,\n",
+       "         3.86643718e-02,  3.39928717e-02, -4.18920050e-02,\n",
+       "        -4.14669983e-02,  5.89639329e-03,  1.87798176e-02,\n",
+       "         3.86643718e-02,  1.56175894e-01,  2.87103922e-02,\n",
+       "        -3.97257232e-02, -3.89465112e-02,  6.32043486e-03,\n",
+       "         1.66180941e-02,  3.39928717e-02,  2.87103922e-02,\n",
+       "         1.54156833e-01],\n",
+       "       [ 1.26266133e-01,  1.46916834e-03, -3.41030111e-03,\n",
+       "         3.49902804e-04,  2.13619343e-03, -2.75784271e-03,\n",
+       "        -2.58359681e-03,  1.46916834e-03,  1.36726591e-01,\n",
+       "        -2.26356778e-02, -3.91089549e-03,  3.11774514e-02,\n",
+       "        -1.75994328e-02, -1.92732705e-02, -3.41030111e-03,\n",
+       "        -2.26356778e-02,  1.73970008e-01,  6.36467023e-03,\n",
+       "        -6.69060352e-02,  3.77711350e-02,  4.10338341e-02,\n",
+       "         3.49902804e-04, -3.91089549e-03,  6.36467023e-03,\n",
+       "         1.25172206e-01, -7.63288931e-03,  5.83609089e-03,\n",
+       "         5.46872585e-03,  2.13619343e-03,  3.11774514e-02,\n",
+       "        -6.69060352e-02, -7.63288931e-03,  2.12002157e-01,\n",
+       "        -4.80318530e-02, -5.69085259e-02, -2.75784271e-03,\n",
+       "        -1.75994328e-02,  3.77711350e-02,  5.83609089e-03,\n",
+       "        -4.80318530e-02,  1.49609753e-01,  2.94840425e-02,\n",
+       "        -2.58359681e-03, -1.92732705e-02,  4.10338341e-02,\n",
+       "         5.46872585e-03, -5.69085259e-02,  2.94840425e-02,\n",
+       "         1.61653317e-01],\n",
+       "       [ 1.30937066e-01, -1.96222134e-03, -2.82044795e-03,\n",
+       "        -2.41666651e-02, -1.34020208e-03, -1.14366327e-02,\n",
+       "         1.45295691e-02, -1.96222134e-03,  1.27070174e-01,\n",
+       "         1.54400651e-03,  1.86650697e-03,  9.96106751e-04,\n",
+       "         2.32043856e-03, -1.66364276e-03, -2.82044795e-03,\n",
+       "         1.54400651e-03,  1.26078773e-01,  2.19308335e-02,\n",
+       "         3.59184952e-04,  1.17309525e-02, -1.11595432e-02,\n",
+       "        -2.41666651e-02,  1.86650697e-03,  2.19308335e-02,\n",
+       "         2.42736946e-01,  2.69404727e-03,  5.37552855e-02,\n",
+       "        -7.18329919e-02, -1.34020208e-03,  9.96106751e-04,\n",
+       "         3.59184952e-04,  2.69404727e-03,  1.25783486e-01,\n",
+       "         1.27905907e-03, -2.84673989e-03, -1.14366327e-02,\n",
+       "         2.32043856e-03,  1.17309525e-02,  5.37552855e-02,\n",
+       "         1.27905907e-03,  1.48144454e-01, -3.38413195e-02,\n",
+       "         1.45295691e-02, -1.66364276e-03, -1.11595432e-02,\n",
+       "        -7.18329919e-02, -2.84673989e-03, -3.38413195e-02,\n",
+       "         1.71651324e-01],\n",
+       "       [ 1.73134719e-01,  5.44290246e-03,  2.50969856e-03,\n",
+       "         1.37924880e-02,  7.72137437e-02, -6.99500115e-03,\n",
+       "         4.12758893e-02,  5.44290246e-03,  1.27884963e-01,\n",
+       "         1.79418822e-03,  1.65872616e-03,  8.00234410e-03,\n",
+       "        -1.03201448e-03,  4.59557930e-03,  2.50969856e-03,\n",
+       "         1.79418822e-03,  1.24496471e-01,  6.01789316e-04,\n",
+       "         7.19469975e-03, -3.31625407e-03,  3.21723010e-03,\n",
+       "         1.37924880e-02,  1.65872616e-03,  6.01789316e-04,\n",
+       "         1.28879388e-01,  2.06947292e-02, -1.45490082e-03,\n",
+       "         1.09836387e-02,  7.72137437e-02,  8.00234410e-03,\n",
+       "         7.19469975e-03,  2.06947292e-02,  2.44714489e-01,\n",
+       "        -1.08275193e-02,  6.41295519e-02, -6.99500115e-03,\n",
+       "        -1.03201448e-03, -3.31625407e-03, -1.45490082e-03,\n",
+       "        -1.08275193e-02,  1.26547500e-01, -5.04585257e-03,\n",
+       "         4.12758893e-02,  4.59557930e-03,  3.21723010e-03,\n",
+       "         1.09836387e-02,  6.41295519e-02, -5.04585257e-03,\n",
+       "         1.56205399e-01],\n",
+       "       [ 1.61104094e-01,  9.22118523e-04,  7.13987256e-02,\n",
+       "         2.59916379e-03,  2.08793941e-02,  2.07465297e-02,\n",
+       "        -2.06887052e-02,  9.22118523e-04,  1.24513948e-01,\n",
+       "         2.23018622e-03, -2.09615731e-04,  2.98022503e-04,\n",
+       "        -1.25559169e-03, -1.08529572e-03,  7.13987256e-02,\n",
+       "         2.23018622e-03,  2.64938398e-01,  6.61547614e-03,\n",
+       "         4.07239179e-02,  3.91246245e-02, -3.85777142e-02,\n",
+       "         2.59916379e-03, -2.09615731e-04,  6.61547614e-03,\n",
+       "         1.24540289e-01,  1.66021060e-03,  6.31635053e-04,\n",
+       "        -1.08910155e-03,  2.08793941e-02,  2.98022503e-04,\n",
+       "         4.07239179e-02,  1.66021060e-03,  1.38161791e-01,\n",
+       "         1.23069258e-02, -1.24747970e-02,  2.07465297e-02,\n",
+       "        -1.25559169e-03,  3.91246245e-02,  6.31635053e-04,\n",
+       "         1.23069258e-02,  1.35426902e-01, -9.67119609e-03,\n",
+       "        -2.06887052e-02, -1.08529572e-03, -3.85777142e-02,\n",
+       "        -1.08910155e-03, -1.24747970e-02, -9.67119609e-03,\n",
+       "         1.35954330e-01],\n",
+       "       [ 2.81918274e-01, -5.83100261e-02, -3.60633774e-02,\n",
+       "         3.56318883e-02, -5.02975986e-02, -2.08411687e-02,\n",
+       "        -1.78408816e-02, -5.83100261e-02,  1.39760388e-01,\n",
+       "         1.16163989e-02, -1.01149056e-02,  2.01854459e-02,\n",
+       "         8.55867823e-03,  7.06814800e-03, -3.60633774e-02,\n",
+       "         1.16163989e-02,  1.34543072e-01, -5.99647372e-03,\n",
+       "         9.86957761e-03,  3.67270449e-03,  3.29521528e-03,\n",
+       "         3.56318883e-02, -1.01149056e-02, -5.99647372e-03,\n",
+       "         1.35435235e-01, -1.19191624e-02, -5.19651460e-03,\n",
+       "        -4.67558055e-03, -5.02975986e-02,  2.01854459e-02,\n",
+       "         9.86957761e-03, -1.19191624e-02,  1.41094664e-01,\n",
+       "         5.60004269e-03,  3.37532834e-03, -2.08411687e-02,\n",
+       "         8.55867823e-03,  3.67270449e-03, -5.19651460e-03,\n",
+       "         5.60004269e-03,  1.29229905e-01,  2.94832768e-03,\n",
+       "        -1.78408816e-02,  7.06814800e-03,  3.29521528e-03,\n",
+       "        -4.67558055e-03,  3.37532834e-03,  2.94832768e-03,\n",
+       "         1.26555209e-01],\n",
+       "       [ 1.26876987e-01, -6.93317989e-03, -4.38823565e-03,\n",
+       "        -1.36346906e-02, -6.11004750e-05,  6.56647825e-03,\n",
+       "        -1.71828507e-02, -6.93317989e-03,  1.37887561e-01,\n",
+       "         5.12717705e-03,  2.35798085e-02, -4.24410516e-03,\n",
+       "        -1.46825003e-02,  2.75736153e-02, -4.38823565e-03,\n",
+       "         5.12717705e-03,  1.27888255e-01,  1.22698497e-02,\n",
+       "        -5.64832468e-04, -8.91921083e-03,  1.71605270e-02,\n",
+       "        -1.36346906e-02,  2.35798085e-02,  1.22698497e-02,\n",
+       "         1.90234349e-01, -7.57427515e-03, -4.24942446e-02,\n",
+       "         7.80460819e-02, -6.11004750e-05, -4.24410516e-03,\n",
+       "        -5.64832468e-04, -7.57427515e-03,  1.23711397e-01,\n",
+       "         6.31075827e-03, -1.04099757e-02,  6.56647825e-03,\n",
+       "        -1.46825003e-02, -8.91921083e-03, -4.24942446e-02,\n",
+       "         6.31075827e-03,  1.51673255e-01, -5.58240387e-02,\n",
+       "        -1.71828507e-02,  2.75736153e-02,  1.71605270e-02,\n",
+       "         7.80460819e-02, -1.04099757e-02, -5.58240387e-02,\n",
+       "         2.22692615e-01],\n",
+       "       [ 1.19805740e-01, -1.24206880e-02, -3.73157667e-03,\n",
+       "         1.09396956e-03,  2.68345275e-03, -1.55592865e-03,\n",
+       "         3.11001655e-04, -1.24206880e-02,  3.03568095e-01,\n",
+       "         5.05928149e-02, -3.54369751e-02, -6.05592484e-03,\n",
+       "         4.38191496e-02,  2.45580064e-02, -3.73157667e-03,\n",
+       "         5.05928149e-02,  1.40267536e-01, -1.16351505e-02,\n",
+       "        -5.32222392e-03,  1.18669023e-02,  7.63179810e-03,\n",
+       "         1.09396956e-03, -3.54369751e-02, -1.16351505e-02,\n",
+       "         1.32569260e-01,  2.12888497e-03, -6.88863423e-03,\n",
+       "        -4.43060686e-03,  2.68345275e-03, -6.05592484e-03,\n",
+       "        -5.32222392e-03,  2.12888497e-03,  1.25830073e-01,\n",
+       "        -2.29885065e-03, -1.74093545e-03, -1.55592865e-03,\n",
+       "         4.38191496e-02,  1.18669023e-02, -6.88863423e-03,\n",
+       "        -2.29885065e-03,  1.36400480e-01,  4.40817967e-03,\n",
+       "         3.11001655e-04,  2.45580064e-02,  7.63179810e-03,\n",
+       "        -4.43060686e-03, -1.74093545e-03,  4.40817967e-03,\n",
+       "         1.30752929e-01],\n",
+       "       [ 1.35972949e-01, -3.70823156e-03, -9.66646431e-03,\n",
+       "        -1.59829014e-02, -2.94186551e-04,  3.11890545e-02,\n",
+       "         1.47914388e-02, -3.70823156e-03,  1.27689312e-01,\n",
+       "         7.21889627e-03,  7.40688696e-03,  3.80785441e-04,\n",
+       "        -1.76658345e-02, -6.38682153e-03, -9.66646431e-03,\n",
+       "         7.21889627e-03,  1.39834286e-01,  2.44586708e-02,\n",
+       "         2.69839702e-04, -4.07929975e-02, -1.78647256e-02,\n",
+       "        -1.59829014e-02,  7.40688696e-03,  2.44586708e-02,\n",
+       "         1.58521788e-01, -3.02577260e-03, -6.89485225e-02,\n",
+       "        -2.76594748e-02, -2.94186551e-04,  3.80785441e-04,\n",
+       "         2.69839702e-04, -3.02577260e-03,  1.27273430e-01,\n",
+       "         4.22566982e-03,  6.98965164e-04,  3.11890545e-02,\n",
+       "        -1.76658345e-02, -4.07929975e-02, -6.89485225e-02,\n",
+       "         4.22566982e-03,  2.51261684e-01,  5.12104658e-02,\n",
+       "         1.47914388e-02, -6.38682153e-03, -1.78647256e-02,\n",
+       "        -2.76594748e-02,  6.98965164e-04,  5.12104658e-02,\n",
+       "         1.41310925e-01],\n",
+       "       [ 1.34586306e-01,  1.75574218e-02, -2.59040111e-02,\n",
+       "         2.23725670e-02, -2.06589918e-03,  2.16367409e-02,\n",
+       "         5.32573778e-03,  1.75574218e-02,  1.52126187e-01,\n",
+       "        -4.73822580e-02,  3.61395549e-02, -7.84384162e-03,\n",
+       "         3.91684473e-02,  7.46433778e-03, -2.59040111e-02,\n",
+       "        -4.73822580e-02,  2.01249250e-01, -6.29227619e-02,\n",
+       "         1.05214217e-02, -6.33714847e-02, -1.28886501e-02,\n",
+       "         2.23725670e-02,  3.61395549e-02, -6.29227619e-02,\n",
+       "         1.72094057e-01, -9.75322595e-03,  5.13380335e-02,\n",
+       "         1.55835828e-02, -2.06589918e-03, -7.84384162e-03,\n",
+       "         1.05214217e-02, -9.75322595e-03,  1.28167113e-01,\n",
+       "        -8.46386209e-03, -3.09279769e-03,  2.16367409e-02,\n",
+       "         3.91684473e-02, -6.33714847e-02,  5.13380335e-02,\n",
+       "        -8.46386209e-03,  1.76204655e-01,  1.19286122e-02,\n",
+       "         5.32573778e-03,  7.46433778e-03, -1.28886501e-02,\n",
+       "         1.55835828e-02, -3.09279769e-03,  1.19286122e-02,\n",
+       "         1.28899461e-01]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4385,7 +4636,7 @@
  "metadata": {
   "author": "i",
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
